--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -24,6 +24,6 @@
     <label for="no-bounce-patch-width">columns</label>&nbsp;<input type="number" name="no-bounce-patch-height" id="no-bounce-patch-width" min="2" max="10" value="4" onchange="no_bounce_update()" step="2" style="width:3em">
     <label for="no-bounce-patch-height">rows</label>&nbsp;<input type="number" name="no-bounce-patch-width" id="no-bounce-patch-height" min="3" max="10" value="6" onchange="no_bounce_update()" style="width:3em">
     <br>
-    <a id="hex_no_bounce_link" href="#" target="_blank"><button type="button">show diagrams</button></a>
+    <a id="hex_no_bounce_link" href="#" target="_blank"><button type="button">to pairs from thread page</button></a>
 </form>
 <script>no_bounce_update();</script>
