--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -11,6 +11,8 @@
 Snow:<br>
 <a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
+<em>examples</em><br>
+<a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
 <a href="/MAE-gf/docs/snowflakes">Examples</a><br>
 <a href="/MAE-gf/docs/spiders">Spider examples</a><br>
 <br>
