added windmills page

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,7 +14,8 @@ Snow:<br>
 <em>examples</em><br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
 <a href="/MAE-gf/docs/snowflakes">Examples</a><br>
-<a href="/MAE-gf/docs/spiders">Spider examples</a><br>
+<a href="/MAE-gf/docs/spiders">Spiders</a><br>
+<a href="/MAE-gf/docs/windmills">Windmills</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
