--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,6 +14,7 @@ Snow:<br>
 <em>examples</em><br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
 <a href="/MAE-gf/docs/snowflakes">Examples</a><br>
+<a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="/MAE-gf/docs/windmills">Windmills</a><br>
 <br>
