--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,5 +76,7 @@ img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 .cctt td {text-align:left; padding:5px}
 .cctt th {text-align:center; padding:5px; font-weight:bold;}
 
-
+/* tables in oidfa.md */
+.oidfa td {text-align:left; padding:5px}
+.oidfa th {text-align:left; padding:5px; font-weight:bold;}
 
