--- a/_includes/test.html
+++ b/_includes/test.html
@@ -1,7 +1,7 @@
 <!-- a clickable picture, border, with text before it -->
 
 <figure>
-  {include.txt}&nbsp;
+  {{include.txt}}nbsp;
   <a href="{{ include.lnk }}">  
   <img alt="{{ include.alt }}" src="{{ include.src }}"  title="{{ include.title }}" class="clpic" >
   </a>
