--- a/_includes/test.html
+++ b/_includes/test.html
@@ -1,8 +1,8 @@
 <!-- a clickable picture, border, with text before it -->
 
-<figure>
+< !--- <figure> -->
   {{include.txt}}&nbsp;
   <a href="{{ include.lnk }}">  
   <img alt="{{ include.alt }}" src="{{ include.src }}"  title="{{ include.title }}" class="clpic" >
   </a>
-</figure>
+<!-- </figure> --> 
