--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -17,6 +17,8 @@ Snow:<br>
 <a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="/MAE-gf/docs/windmills">Windmills</a><br>
+<em>more about snowflakes</em><br>
+<a href="../GroundForge/mix4snow/" target="_blank">snowflake mixer</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
