--- a/_includes/captionfig.html
+++ b/_includes/captionfig.html
@@ -1,8 +1,8 @@
-<!-- a clickable picture, border, with text before it -->
+<!-- a clickable picture, border, with text underneat it -->
 
 <figure style="display: inline-block">
     <a href="{{ include.lnk }}">  
   <img alt="{{ include.alt }}" src="{{ include.src }}"  title="{{ include.title }}" class="clpic" >
   </a>
-  <figcaption>{{include.txt}}</figcaption>
+  <figcaption><em></em>{{include.txt}}</em></figcaption>
 </figure>
