--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -18,7 +18,7 @@ Snow:<br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="/MAE-gf/docs/windmills">Windmills</a><br>
 <em>more about snowflakes</em><br>
-<a href="../GroundForge/mix4snow/" target="_blank">snowflake mixer</a><br>
+<a href="/GroundForge/mix4snow/" target="_blank">snowflake mixer</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
