prepare splitting spiders & stars

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -8,15 +8,23 @@
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
-Snow:<br>
+n-Pair joins:<br>
 <a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
-<em>examples</em><br>
+<em>examples 3-pair joins</em><br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
+<em>examples 4-pair joins</em><br>
 <a href="/MAE-gf/docs/snowflakes">Little snowflakes (4 pairs)</a><br>
-<a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
-<a href="/MAE-gf/docs/spiders">Spiders</a><br>
+Spiders
 <a href="/MAE-gf/docs/windmills">Windmills</a><br>
+<em>examples 6-pair joins</em><br>
+<a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
+Spiders
+Stars
+<em>examples 8-pair joins</em><br>
+<a href="/MAE-gf/docs/spiders">Spiders</a><br>
+<em>examples 10-pair joins</em><br>
+Spiders
 <em>more about snowflakes</em><br>
 <a href="/GroundForge/mix4snow/" target="_blank">Snowflake mixer</a><br>
 <br>
