--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -15,16 +15,16 @@ n-Pair joins:<br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
 <em>examples 4-pair joins</em><br>
 <a href="/MAE-gf/docs/snowflakes">Little snowflakes (4 pairs)</a><br>
-Spiders
+Spiders<br>
 <a href="/MAE-gf/docs/windmills">Windmills</a><br>
 <em>examples 6-pair joins</em><br>
 <a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
-Spiders
+Spiders<br>
 <a href="/MAE-gf/docs/stars_6">Stars with 6 pairs</a><br>
 <em>examples 8-pair joins</em><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <em>examples 10-pair joins</em><br>
-Spiders
+Spiders<br>
 <em>more about snowflakes</em><br>
 <a href="/GroundForge/mix4snow/" target="_blank">Snowflake mixer</a><br>
 <br>
