--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -20,7 +20,7 @@ Spiders<br>
 <em>examples 6-pair joins</em><br>
 <a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
 Spiders<br>
-<a href="/MAE-gf/docs/stars_6">Stars with 6 pairs</a><br>
+<a href="/MAE-gf/docs/star_6">Stars with 6 pairs</a><br>
 <em>examples 8-pair joins</em><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <em>examples 10-pair joins</em><br>
