--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -11,20 +11,16 @@
 n-Pair joins:<br>
 <a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
-<em>examples 3-pair joins</em><br>
+<em>examples</em><br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
-<em>examples 4-pair joins</em><br>
 <a href="/MAE-gf/docs/snowflakes">Little snowflakes (4 pairs)</a><br>
-Spiders<br>
-<a href="/MAE-gf/docs/windmills">Windmills</a><br>
-<em>examples 6-pair joins</em><br>
-<a href="/MAE-gf/docs/snow_6">Snowflakes with 6 pairs</a><br>
-Spiders<br>
-<a href="/MAE-gf/docs/star_6">Stars with 6 pairs</a><br>
-<em>examples 8-pair joins</em><br>
+Spiders (4 pairs, 8 legs)<br>
+<a href="/MAE-gf/docs/windmills">Windmills (4 pairs)</a><br>
+<a href="/MAE-gf/docs/snow_6">Snowflakes (6 pairs)</a><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
-<em>examples 10-pair joins</em><br>
-Spiders<br>
+<a href="/MAE-gf/docs/star_6">Stars (6 pairs)</a><br>
+Spiders (8 pairs, 16 legs)<br>
+Spiders (10 pairs, 20 legs)<br>
 <em>more about snowflakes</em><br>
 <a href="/GroundForge/mix4snow/" target="_blank">Snowflake mixer</a><br>
 <br>
