--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -13,14 +13,14 @@ n-Pair joins:<br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
 <em>examples</em><br>
 <a href="/MAE-gf/docs/snow_3">3 pair joins</a><br>
-<a href="/MAE-gf/docs/snowflakes">Little snowflakes (4 pairs)</a><br>
-Spiders (4 pairs, 8 legs)<br>
-<a href="/MAE-gf/docs/windmills">Windmills (4 pairs)</a><br>
-<a href="/MAE-gf/docs/snow_6">Snowflakes (6 pairs)</a><br>
-<a href="/MAE-gf/docs/spiders">Spiders</a><br>
-<a href="/MAE-gf/docs/star_6">Stars (6 pairs)</a><br>
-Spiders (8 pairs, 16 legs)<br>
-Spiders (10 pairs, 20 legs)<br>
+<a href="/MAE-gf/docs/snowflakes">4 pair joins: Little snowflakes</a><br>
+<a href="/MAE-gf/docs/spin_4">4 pair joins: Spiders with 8 legs</a><br>
+<a href="/MAE-gf/docs/windmills">4 pair joins: Windmills</a><br>
+<a href="/MAE-gf/docs/snow_6">6 pair joins: Snowflakes</a><br>
+<a href="/MAE-gf/docs/spiders">6 pair joins: Spiders with 12 legs</a><br>
+<a href="/MAE-gf/docs/star_6">6 pair joins: Stars</a><br>
+<a href="/MAE-gf/docs/spin_4">8 pair joins: Spiders with 16 legs</a><br>
+<a href="/MAE-gf/docs/spin_4">10 pair joins: Spiders  with 20 legs</a><br>
 <em>more about snowflakes</em><br>
 <a href="/GroundForge/mix4snow/" target="_blank">Snowflake mixer</a><br>
 <br>
