added color pink

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,7 @@ header h1, header h2 {width:100%}
 .b-blck {color: #000000; font-weight: bold;}
 .b-orng {color: #FF6600; font-weight: bold;}
 .b-yell {color: #FFFF00; font-weight: bold;}
+.b-pink {color: #ff00ff; font-weight: bold;}
 
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
