--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,19 +49,8 @@
         </section>
 
         <aside id="sidebar">
-            {% include Sidebar.html %}
-
-            {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="button">
-                <small>Download</small>
-                .zip file
-            </a>
-            <a href="{{ site.github.tar_url }}" class="button">
-                <small>Download</small>
-                .tar.gz file
-            </a>
-            {% endif %}
-
+            {% capture my_include %}{% include Sidebar.md %}{% endcapture %}
+            {{ my_include | markdownify }}
          </aside>
     </div>
 </div>
