--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,10 +12,12 @@ header h1 a:hover {color: #9ddcff}
 .deprecated { background: darkorange; padding: 2px; }
 header h1, header h2 {width:100%}
 
-#sidebar ul { padding-left: 0; margin-bottom: 0px; font-weight: bold; font-size: 12px; color: #474747; }
+
+#sidebar ul { padding-left: 0; margin-bottom: 0; font-weight: bold; font-size: 12px; color: #474747; }
 #sidebar ul { font-weight: normal; }
 #sidebar sub { font-weight: normal; }
 #sidebar li { list-style-type: none; padding-bottom: 0; }
+#sidebar ul ul { padding-left: 16px;  padding-bottom: 0;}
 
 #main-content li ul  { padding-bottom: 0; }
 
